--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,9 +17,11 @@
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^5.3.9",
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.26",
     "eslint-config-prettier": "^8.8.0",
     "prettier": "2.8.7"
   }
