--- a/front-end/package.json
+++ b/front-end/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.26",
+    "babel-plugin-styled-components": "^2.1.1",
     "eslint-config-prettier": "^8.8.0",
     "prettier": "2.8.7"
   }
