chore(BE): #S08P31A306-117 add dependency(jwt, redis)

--- a/back-end/roughcode/build.gradle
+++ b/back-end/roughcode/build.gradle
@@ -32,12 +32,17 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 
+    implementation 'org.springdoc:springdoc-openapi-ui:1.6.14'
+    implementation 'com.google.code.gson:gson:2.9.0'
+
     // jwt
-    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5',
-            // Uncomment the next line if you want to use RSASSA-PSS (PS256, PS384, PS512) algorithms:
-            //'org.bouncycastle:bcprov-jdk15on:1.70',
-            'io.jsonwebtoken:jjwt-jackson:0.11.5' // or 'io.jsonwebtoken:jjwt-gson:0.11.5' for gson
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+    implementation('com.auth0:java-jwt:4.2.1')
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+
+    //redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
 }
 
