--- a/back-end/roughcode/build.gradle
+++ b/back-end/roughcode/build.gradle
@@ -39,6 +39,9 @@ dependencies {
     implementation('com.auth0:java-jwt:4.2.1')
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+
+    // AWS S3
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 }
 
 tasks.named('test') {
