--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,6 +20,7 @@
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "styled-components": "^5.3.9",
     "typescript": "5.0.4"
