feat(BE): #S08P31A306-107 add test project insert and finish thumbnail upload

--- a/back-end/roughcode/build.gradle
+++ b/back-end/roughcode/build.gradle
@@ -42,6 +42,9 @@ dependencies {
 
     // AWS S3
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
+    implementation 'org.hibernate:hibernate-validator:6.2.5.Final'
+    testImplementation 'org.glassfish:jakarta.el'
 }
 
 tasks.named('test') {
