test(BE): #S08P31A306-228 connect with mongodb

--- a/back-end/roughcode/build.gradle
+++ b/back-end/roughcode/build.gradle
@@ -50,6 +50,9 @@ dependencies {
 
     implementation 'org.hibernate:hibernate-validator:6.2.5.Final'
     testImplementation 'org.glassfish:jakarta.el'
+
+    // mongoDB
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 }
 
 tasks.named('test') {
