--- a/front-end/package.json
+++ b/front-end/package.json
@@ -27,7 +27,8 @@
     "react-intersection-observer": "^9.4.3",
     "react-redux": "^8.0.5",
     "styled-components": "^5.3.9",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.26",
