--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,15 @@ services:
     image: redis:6.2.6-alpine
     ports:
       - "6379:6379"
+  mongodb:
+    image: mongo:4.4.10
+    volumes:
+      - mongodb-data:/data/db
+    ports:
+      - "27017:27017"
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=ssafy306
+      - MONGO_INITDB_ROOT_PASSWORD=ssafy306
   backend:
     build:
       context: ./back-end/roughcode
@@ -35,3 +44,4 @@ services:
 
 volumes:
   db-data:
+  mongodb-data:
