--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,20 +10,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-switch": "^1.0.2",
     "@tanstack/react-query": "^4.29.5",
     "@tanstack/react-query-devtools": "^4.29.5",
     "axios": "^1.3.6",
-    "@tanstack/react-query": "^4.29.5",
-    "@tanstack/react-query-devtools": "^4.29.5",
-    "axios": "^1.3.6",
+    "dayjs": "^1.11.7",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "^4.0.4",
     "react-error-boundary": "^4.0.4",
     "react-icons": "^4.8.0",
-    "styled-components": "^5.3.9"
-    "styled-components": "^5.3.9"
+    "react-intersection-observer": "^9.4.3",
+    "styled-components": "^5.3.9",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^4.29.4",
