fix(CM): #S08P31A306-176 docker-compose google-cloud-cli

--- a/back-end/roughcode/Dockerfile
+++ b/back-end/roughcode/Dockerfile
@@ -5,6 +5,10 @@ COPY gradle gradle
 COPY build.gradle .
 COPY settings.gradle .
 COPY src src
+
+COPY credentials.json credentials.json
+COPY .env .env
+
 RUN chmod +x ./gradlew
 RUN ./gradlew bootJar
 
