--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,12 +41,14 @@ services:
       - SPRING_DATASOURCE_USERNAME=ssafy306
       - SPRING_DATASOURCE_PASSWORD=ssafy306
       - REDIS_HOST=redis
-  my-app:
-    image: my-image
+  google-cloud-cli:
+    image: google/cloud-sdk:latest
     environment:
       - GOOGLE_APPLICATION_CREDENTIALS=/app/google-credentials.json
     volumes:
       - /path/to/google-credentials.json:/app/google-credentials.json
+      - /path/to/.env:/.env
+    entrypoint: /bin/bash
 
 volumes:
   db-data:
