fix(CM): #S08P31A306-176 fix google-credentials.json to credentials.json

--- a/back-end/roughcode/Dockerfile
+++ b/back-end/roughcode/Dockerfile
@@ -6,7 +6,7 @@ COPY build.gradle .
 COPY settings.gradle .
 COPY src src
 
-COPY google-credentials.json google-credentials.json
+COPY credentials.json credentials.json
 COPY .env .env
 
 RUN chmod +x ./gradlew
