delete(BE): delete secret files

--- a/back-end/roughcode/src/main/resources/application.yml
+++ b/back-end/roughcode/src/main/resources/application.yml
@@ -53,7 +53,7 @@ jwt:
 
 app:
   oauth2:
-    authorizedRedirectUri: http://${HOST}:3000/oauth2/redirect
+    authorizedRedirectUri: http://localhost:3000/oauth2/redirect
 
 credential:
   path: ${CREDENTIAL_PATH}
