refactor(BE): edit application.yml and ProjetDetailRes

--- a/back-end/roughcode/src/main/resources/application.yml
+++ b/back-end/roughcode/src/main/resources/application.yml
@@ -56,4 +56,4 @@ app:
     authorizedRedirectUri: http://localhost:3000/oauth2/redirect
 
 credential:
-  path: ${CREDENTIAL_PATH}
+  path: google-credentials.json
