fix(CM): #S08P31A306-176 docker-compose fix gcc volumes path

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
   google-cloud-cli:
     image: google/cloud-sdk:latest
     volumes:
-      - /home/ubuntu/google-credentials.json:${CREDENTIAL_PATH}
+      - /home/ubuntu/google-credentials.json:/app/roughcode:rw
     entrypoint: /bin/bash
     environment:
       - CREDENTIAL_PATH=${CREDENTIAL_PATH}
