feat(CM): #S08P31A306-176 add backend environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,8 @@ services:
       - db
       - mongodb
       - redis
+    environment:
+      - CREDENTIAL_PATH=/home/ubuntu/.env
   google-cloud-cli:
     image: google/cloud-sdk:latest
     volumes:
