fix(CM): #S08P31A306-176 fix backend environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,7 @@ services:
       - redis
     environment:
       - S3_ACCESSKEY=${S3_ACCESSKEY}
+      - S3_SECRETKEY=${S3_SECRETKEY}
   google-cloud-cli:
     image: google/cloud-sdk:latest
     volumes:
