--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,18 @@ services:
     environment:
       - S3_ACCESSKEY=${S3_ACCESSKEY}
       - S3_SECRETKEY=${S3_SECRETKEY}
+      - HOST=${HOST}
+      - JWT_SECRET=${JWT_SECRET}
+      - MARIADB_PASSWORD=${MARIADB_PASSWORD}
+      - MARIADB_USER=${MARIADB_USER}
+      - MONGODB_DATABASE=${MONGODB_DATABASE}
+      - MONGODB_PASSWORD=${MONGODB_PASSWORD}
+      - MONGODB_USER=${MONGODB_USER}
+      - OAUTH2_CLIENT_ID=${OAUTH2_CLIENT_ID}
+      - OAUTH2_CLIENT_SECRET=${OAUTH2_CLIENT_SECRET}
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - CREDENTIAL_PATH=${CREDENTIAL_PATH}
+
   google-cloud-cli:
     image: google/cloud-sdk:latest
     volumes:
