--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,28 @@
 version: "3.8"
 
 services:
-  # db:
-  #   image: mariadb:10.6.5
-  #   volumes:
-  #     - db-data:/var/lib/mysql
-  #   environment:
-  #     - MYSQL_ROOT_PASSWORD=${MARIADB_PASSWORD}
-  #     - MYSQL_DATABASE=roughcode
-  #   ports:
-  #     - "3306:3306"
-  # redis:
-  #   image: redis:6.2.6-alpine
-  #   ports:
-  #     - "6379:6379"
-  # mongodb:
-  #   image: mongo:4.4.10
-  #   volumes:
-  #     - mongodb-data:/data/db
-  #   ports:
-  #     - "27017:27017"
-  #   environment:
-  #     - MONGO_INITDB_ROOT_USERNAME=${MONGODB_USER}
-  #     - MONGO_INITDB_ROOT_PASSWORD=${MONGODB_PASSWORD}
+  db:
+    # image: mariadb:10.6.5
+    volumes:
+      - db-data:/var/lib/mysql
+    environment:
+      - MYSQL_ROOT_PASSWORD=${MARIADB_PASSWORD}
+      - MYSQL_DATABASE=roughcode
+    ports:
+      - "3306:3306"
+  redis:
+    # image: redis:6.2.6-alpine
+    ports:
+      - "6379:6379"
+  mongodb:
+    # image: mongo:4.4.10
+    volumes:
+      - mongodb-data:/data/db
+    ports:
+      - "27017:27017"
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGODB_USER}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGODB_PASSWORD}
   backend:
     build:
       context: ./back-end/roughcode
