chore(BE): #S08P31A306-173 change oauth2 redirect uri

--- a/back-end/roughcode/src/main/resources/application.yml
+++ b/back-end/roughcode/src/main/resources/application.yml
@@ -53,4 +53,4 @@ jwt:
 
 app:
   oauth2:
-    authorizedRedirectUri: http://localhost:3000/oauth2/redirect
+    authorizedRedirectUri: http://${HOST}:3000/oauth2/redirect
