feat(FE): #S08P31A306-158 implement an infinite scroll with API communication with our server

--- a/front-end/.env
+++ b/front-end/.env
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_API_URL=https://rough-code.com/api
+# NEXT_PUBLIC_API_URL=https://rough-code.com/api
+NEXT_PUBLIC_API_URL=http://k8a306.p.ssafy.io:8081/api/v1
