feat(CM): #S08P31A306-275 create nginx docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,17 @@
 version: "3.8"
 
 services:
+  nginx:
+    restart: always
+    container_name: nginx
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
+    ports:
+      - "3000:80"
+    networks:
+      - frontend
+
   frontend:
     build:
       # 어디에서 도커를 시작할 것인가
@@ -10,3 +21,5 @@ services:
     restart: always
     ports:
       - 80:3000
+    environment:
+      - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
