--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - 80:3000
     environment:
       - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
+    networks:
+      - app-network
 
   nginx:
     restart: always
@@ -20,9 +22,10 @@ services:
       context: ./nginx
       dockerfile: Dockerfile
     ports:
-      - "3000:80"
+      - "80:80"
     networks:
-      - frontend
+      - app-network
 
 networks:
-  frontend:
+  app-network:
+    driver: bridge
