--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,5 +1,5 @@
-upstream dev-front_frontend_1 {
-    server dev-front_frontend_1:80;
+upstream frontend {
+    server frontend:3000;
 }
 
 server {
@@ -7,11 +7,11 @@ server {
     server_name rough-code.com;
 
     location / {        
-        proxy_pass http://dev-front_frontend_1;
+        proxy_pass http://frontend;
     }
 
     location /sockjs-node {
-        proxy_pass http://dev-front_frontend_1;
+        proxy_pass http://frontend;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
