--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,7 +9,7 @@ http {
 
   server {
     listen 80;
-    server_name YOUR_DOMAIN_ADDRESS;
+    server_name rough-code.com;
     server_tokens off;
 
     location / {
@@ -23,7 +23,7 @@ http {
 
   server {
     listen 443 ssl;
-    server_name YOUR_DOMAIN_ADDRESS;
+    server_name rough-code.com;
     server_tokens off;
 
     location /api { # 이 부분은 api라는 uri로 통신 시 백엔드에 프록시 처리를 하기 위함
@@ -41,8 +41,8 @@ http {
       try_files $uri $uri/ /index.html;
     }
 
-    ssl_certificate /etc/letsencrypt/live/YOUR_DOMAIN_ADDRESS/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/YOUR_DOMAIN_ADDRESS/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/rough-code.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/rough-code.com/privkey.pem;
   }
 
   include /etc/letsencrypt/options-ssl-nginx.conf;
