feat(CM): #S08P31A306-277 fix certbot version

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
       - app-network
 
   certbot: # certbot 서비스 추가
-    image: certbot/certbot:arm32v6-latest
+    image: certbot/certbot
     container_name: certbot_service
     volumes:
       - ../certbot/conf:/etc/letsencrypt
