--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,8 @@ services:
     volumes:
       - /app/node_modules
       - ./frontend:/app
-      - ../certbot/conf:/etc/letsencrypt # 추가
-      - ../certbot/www:/var/www/certbot # 추가
+      - ./certbot/conf:/etc/letsencrypt # 추가
+      - ./certbot/www:/var/www/certbot # 추가
 
     ports:
       - "80:80"
@@ -42,8 +42,8 @@ services:
     image: certbot/certbot
     container_name: certbot_service
     volumes:
-      - ../certbot/conf:/etc/letsencrypt
-      - ../certbot/www:/var/www/certbot
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 
 networks:
