feat(CM): #S08P31A306-277 https

--- a/conf.d/default.conf
+++ b/conf.d/default.conf
@@ -3,7 +3,6 @@ upstream frontend {
 }
 
 server {
-    listen [::]:80;
     listen 80;
     server_name rough-code.com www.rough-code.com;
 
@@ -16,19 +15,19 @@ server {
 
     location / {     
         return 301 https://$host$request_uri;   
-        proxy_pass http://frontend;
-        root /usr/share/nginx/html; # 실행할 파일들의 루트 위치 '/' 쓰는 거 중요하다. 
-        index index.html index.htm; # index.html을 지정
-        try_files $uri $uri/ /index.html; # 파일 찾을 때 명시된 순서로 찾으며, 가장 먼저 발견되는 파일을 사용
+        # proxy_pass http://frontend;
+        # root /usr/share/nginx/html; # 실행할 파일들의 루트 위치 '/' 쓰는 거 중요하다. 
+        # index index.html index.htm; # index.html을 지정
+        # try_files $uri $uri/ /index.html; # 파일 찾을 때 명시된 순서로 찾으며, 가장 먼저 발견되는 파일을 사용
 
     }
 
-    location /sockjs-node {
-        proxy_pass http://frontend;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
-    }
+    # location /sockjs-node {
+    #     proxy_pass http://frontend;
+    #     proxy_http_version 1.1;
+    #     proxy_set_header Upgrade $http_upgrade;
+    #     proxy_set_header Connection "Upgrade";
+    # }
 
 }
 
