--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,17 +16,15 @@ services:
       - app-network
 
   nginx:
+    image: nginx:latest
     container_name: nginx
-    build:
-      context: ./nginx
-      dockerfile: Dockerfile
 
-    restart: unless-stopped # 개발자가 stop 하는 경우를 제외하고 꺼지면 자동으로 다시 실행하겠다.
+    restart: always # 개발자가 stop 하는 경우를 제외하고 꺼지면 자동으로 다시 실행하겠다.
     volumes:
-      - ./data/nginx:/etc/nginx/conf.d # Nginx 설정 파일 위치 공유 : 로컬에 미리 작성해준 설정을 Nginx 폴더와 공유
+      - ./conf.d/nginx:/etc/nginx/conf.d # Nginx 설정 파일 위치 공유 : 로컬에 미리 작성해준 설정을 Nginx 폴더와 공유
       - ./app/build:/usr/share/nginx/html # React App을 npm run build로 만든 build된 파일들이 있는 위치 맵핑
-      - ./data/certbot/conf:/etc/letsencrypt # Certbot 설정 공유
-      - ./data/certbot/www:/var/www/certbot # Certbot과 볼륨 공유
+      - work dir/certbot/conf:/etc/nginx/ssl
+      - work dir/certbot/data:/var/www/certbot
 
     ports:
       - "80:80"
@@ -39,16 +37,16 @@ services:
       - app-network
 
   certbot: # certbot 서비스 추가
-    image: certbot/certbot
-    container_name: certbot_service
+    image: certbot/certbot:latest
+    container_name: certbot
     command: certonly --webroot --webroot-path=/var/www/certbot --email dongsu712@naver.com --agree-tos --no-eff-email -d rough-code.com -d www.rough-code.com
     depends_on:
       - nginx
     # restart: unless-stopped
     volumes:
-      - ./data/certbot/conf:/etc/letsencrypt
-      - ./data/certbot/www:/var/www/certbot
-      - ./data/certbot/logs:/var/log/letsencrypt
+      - work dir/certbot/conf:/etc/letsencrypt
+      - work dir/certbot/logs:/var/log/letsencrypt
+      - work dir/certbot/data:/var/www/certbot
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 
 networks:
