--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,9 +44,9 @@ services:
       - nginx
     # restart: unless-stopped
     volumes:
-      - work dir/certbot/conf:/etc/letsencrypt
-      - work dir/certbot/logs:/var/log/letsencrypt
-      - work dir/certbot/data:/var/www/certbot
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/logs:/var/log/letsencrypt
+      - ./data/certbot/data:/var/www/certbot
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 
 networks:
