--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,17 +13,20 @@
     "@radix-ui/react-switch": "^1.0.2",
     "@tanstack/react-query": "^4.29.5",
     "@tanstack/react-query-devtools": "^4.29.5",
+    "@tippyjs/react": "^4.2.6",
     "axios": "^1.3.6",
+    "css-loader": "^6.7.3",
     "dayjs": "^1.11.7",
-    "monaco-editor": "^0.37.1",
+    "monaco-editor": "^0.38.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "^4.0.4",
     "react-icons": "^4.8.0",
     "react-intersection-observer": "^9.4.3",
-    "react-monaco-editor": "^0.52.0",
+    "style-loader": "^3.3.2",
     "styled-components": "^5.3.9",
+    "tippy.js": "^6.3.7",
     "zustand": "^4.3.7"
   },
   "devDependencies": {
