feat(CM): #S08P31A306-270 add Jenkinsfile

--- a/back-end/roughcode/build.gradle
+++ b/back-end/roughcode/build.gradle
@@ -94,6 +94,13 @@ subprojects {
     }
 }
 
+sonar {
+  properties {
+    property "sonar.projectKey", "sonar"
+    property "sonar.projectName", "sonar"
+  }
+}
+
 
 // jacoco {
 //   // JaCoCo 버전
