feat(CM): #S08P31A306-270 fix Jenkinsfuile SonarQube steps

--- a/back-end/roughcode/Jenkinsfile
+++ b/back-end/roughcode/Jenkinsfile
@@ -3,6 +3,13 @@ node {
     checkout scm
   }
   stage('SonarQube Analysis') {
+    steps {
+      script {
+        withSonarQubeEnv('SonarQube') {
+          sh 'sonar-scanner'
+        }
+      }
+    }
     withSonarQubeEnv() {
       sh "./gradlew sonar"
     }
