--- a/back-end/roughcode/Jenkinsfile
+++ b/back-end/roughcode/Jenkinsfile
@@ -1,17 +1,28 @@
-node {
-  stage('SCM') {
-    checkout scm
-  }
-  stage('SonarQube Analysis') {
-    steps {
-      script {
-        withSonarQubeEnv('SonarQube') {
-          sh 'sonar-scanner'
+pipeline {
+    agent any
+    stages {
+        stage('SCM') {
+            steps {
+                git 'https://github.com/foo/bar.git'
+            }
         }
-      }
+
+        stage('Test') {
+            steps {
+                dir('backend') {
+                    sh './gradlew test'
+                }
+            }
+        }
+
+        stage('SonarQube analysis') {
+            steps {
+                withSonarQubeEnv('sonar') {
+                    dir('backend') {
+                        sh './gradlew sonarqube'
+                    }
+                }
+            }
+        }
     }
-    withSonarQubeEnv() {
-      sh "./gradlew sonar"
-    }
-  }
 }
