--- a/back-end/roughcode/build.gradle
+++ b/back-end/roughcode/build.gradle
@@ -73,33 +73,54 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
-subprojects {
-    apply plugin: 'org.sonarqube'
 
-    sonarqube {
-        properties {
-            property 'sonar.projectKey', 'sonar'
-            property 'sonar.projectName', 'sonar'
-            property 'sonar.host.url', 'http://k8a306.p.ssafy.io:8000/'
-            property 'sonar.login', 'squ_befdf245a27681f3b88ede9e061123599de353bf'
-            property 'sonar.sources', 'src'
-            property 'sonar.language', 'java'
-            property 'sonar.projectVersion', '1.1.0-SNAPSHOT'
-            property 'sonar.sourceEncoding', 'UTF-8'
-            property 'sonar.coverage.jacoco.xmlReportPaths', '${buildDir}/reports/jacoco/test/jacocoTestReport.xml'
-            property 'sonar.java.binaries', '${buildDir}/classes'
-            property 'sonar.test.inclusions', '**/*Test.java'
-            property 'sonar.exclusions', '**/test/**, **/Q*.java, **/*Doc*.java, **/resources/**'
-        }
+sonarqube {
+    properties {
+        property "sonar.projectKey", "sonar"
+        property "sonar.projectName", "sonar"
+        property 'sonar.host.url', 'http://k8a306.p.ssafy.io:8000/'
+        property 'sonar.login', 'squ_befdf245a27681f3b88ede9e061123599de353bf'
+
+        property 'sonar.sources', 'src'
+
+        property "sonar.java.binaries", "${buildDir}/classes"
+        property "sonar.sourceEncoding", "UTF-8"
+        // property "sonar.sources", "src/main/java"
+        property "sonar.exclusions", "**/util/**, **/support/**, **/dto/**"
+
+        property "sonar.tests", "src/test/java"
+        property "sonar.test.inclusions", "**/*Test.java"
+        property "sonar.coverage.jacoco.xmlReportPaths", "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
     }
 }
 
-sonar {
-  properties {
-    property "sonar.projectKey", "sonar"
-    property "sonar.projectName", "sonar"
-  }
-}
+// subprojects {
+//     apply plugin: 'org.sonarqube'
+
+//     sonarqube {
+//         properties {
+//             property 'sonar.projectKey', 'sonar'
+//             property 'sonar.projectName', 'sonar'
+//             property 'sonar.host.url', 'http://k8a306.p.ssafy.io:8000/'
+//             property 'sonar.login', 'squ_befdf245a27681f3b88ede9e061123599de353bf'
+//             property 'sonar.sources', 'src'
+//             property 'sonar.language', 'java'
+//             property 'sonar.projectVersion', '1.1.0-SNAPSHOT'
+//             property 'sonar.sourceEncoding', 'UTF-8'
+//             property 'sonar.coverage.jacoco.xmlReportPaths', '${buildDir}/reports/jacoco/test/jacocoTestReport.xml'
+//             property 'sonar.java.binaries', '${buildDir}/classes'
+//             property 'sonar.test.inclusions', '**/*Test.java'
+//             property 'sonar.exclusions', '**/test/**, **/Q*.java, **/*Doc*.java, **/resources/**'
+//         }
+//     }
+// }
+
+// sonar {
+//   properties {
+//     property "sonar.projectKey", "sonar"
+//     property "sonar.projectName", "sonar"
+//   }
+// }
 
 
 // jacoco {
