--- a/back-end/roughcode/build.gradle
+++ b/back-end/roughcode/build.gradle
@@ -83,14 +83,14 @@ sonarqube {
 
         property 'sonar.sources', 'src'
 
-        property "sonar.java.binaries", "${buildDir}/classes"
-        property "sonar.sourceEncoding", "UTF-8"
+        // property "sonar.java.binaries", "${buildDir}/classes"
+        // property "sonar.sourceEncoding", "UTF-8"
         // property "sonar.sources", "src/main/java"
-        property "sonar.exclusions", "**/util/**, **/support/**, **/dto/**"
+        // property "sonar.exclusions", "**/util/**, **/support/**, **/dto/**"
 
-        property "sonar.tests", "src/test/java"
-        property "sonar.test.inclusions", "**/*Test.java"
-        property "sonar.coverage.jacoco.xmlReportPaths", "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
+        // property "sonar.tests", "src/test/java"
+        // property "sonar.test.inclusions", "**/*Test.java"
+        // property "sonar.coverage.jacoco.xmlReportPaths", "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
     }
 }
 
