fix(CM): #S08P31A306-270 fix build.gradle & Jenkinsfile

--- a/back-end/roughcode/build.gradle
+++ b/back-end/roughcode/build.gradle
@@ -117,8 +117,8 @@ tasks.named('test') {
 
 sonar {
   properties {
-    property "sonar.projectKey", "sonar"
-    property "sonar.projectName", "sonar"
+    property "sonar.projectKey", "sonarqube"
+    property "sonar.projectName", "sonarqube"
   }
 }
 
