fix(CM): #S08P31A306-270 reset

--- a/back-end/roughcode/Jenkinsfile
+++ b/back-end/roughcode/Jenkinsfile
@@ -27,13 +27,13 @@
 //     }
 // }
 
-node {
-  stage('SCM') {
-    checkout scm
-  }
-  stage('SonarQube Analysis') {
-    withSonarQubeEnv() {
-      sh "./gradlew sonar"
-    }
-  }
-}
+// node {
+//   stage('SCM') {
+//     checkout scm
+//   }
+//   stage('SonarQube Analysis') {
+//     withSonarQubeEnv() {
+//       sh "./gradlew sonar"
+//     }
+//   }
+// }
