--- a/back-end/roughcode/build.gradle
+++ b/back-end/roughcode/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '2.7.10'
     id 'io.spring.dependency-management' version '1.0.15.RELEASE'
-    id "org.sonarqube" version "4.0.0.2929"
+    // id "org.sonarqube" version "4.0.0.2929"
     // id 'jacoco'
 }
 
@@ -115,12 +115,12 @@ tasks.named('test') {
 //     }
 // }
 
-sonar {
-  properties {
-    property "sonar.projectKey", "sonarqube"
-    property "sonar.projectName", "sonarqube"
-  }
-}
+// sonar {
+//   properties {
+//     property "sonar.projectKey", "sonarqube"
+//     property "sonar.projectName", "sonarqube"
+//   }
+// }
 
 
 // jacoco {
