--- a/back-end/roughcode/build.gradle
+++ b/back-end/roughcode/build.gradle
@@ -67,6 +67,9 @@ dependencies {
 
     // validation
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+    // email
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 tasks.named('test') {
