--- a/back-end/roughcode/src/main/resources/application.yml
+++ b/back-end/roughcode/src/main/resources/application.yml
@@ -68,3 +68,18 @@ spring:
       enabled: false			# 시작과 동시에 실행되는건 방지
     jdbc:
       initialize-schema: always # batch 스키마 자동 생성
+
+---
+# Mail Sending
+spring:
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ${EMAIL_USERNAME}
+    password: ${EMAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
