fix(BE): #S08P31A306-236 change cookie domain for subdomain testing

--- a/back-end/roughcode/src/main/resources/application.yml
+++ b/back-end/roughcode/src/main/resources/application.yml
@@ -60,6 +60,7 @@ app:
       http://${HOST}:80,
       https://${HOST}:3000,
       https://${HOST}:80
+  host: ${HOST}
 ---
 #spring boot batch + scheduler
 spring:
