--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.0",
     "@monaco-editor/react": "^4.5.0",
     "@radix-ui/react-switch": "^1.0.2",
     "@tanstack/react-query": "^4.29.5",
@@ -22,11 +23,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "^4.0.4",
+    "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-intersection-observer": "^9.4.3",
     "style-loader": "^3.3.2",
     "styled-components": "^5.3.9",
     "tippy.js": "^6.3.7",
+    "zod": "^3.21.4",
     "zustand": "^4.3.7"
   },
   "devDependencies": {
