fix(CM): #S08P31A306-270 fix docker-compose-sonar db name

--- a/docker-compose-sonar.yml
+++ b/docker-compose-sonar.yml
@@ -13,14 +13,14 @@ services:
     networks:
       - sonarnet
     environment:
-      - sonar.jdbc.url=jdbc:postgresql://db:5432/sonar
+      - sonar.jdbc.url=jdbc:postgresql://sonardb:5432/sonar
     volumes:
       - sonarqube_conf:/opt/sonarqube/conf
       - sonarqube_data:/opt/sonarqube/data
       - sonarqube_extensions:/opt/sonarqube/extensions
       - sonarqube_logs:/opt/sonarqube/logs
 
-  db:
+  sonardb:
     image: postgres
     container_name: postgres_sonar
     ports:
