--- a/docker-compose-sonar.yml
+++ b/docker-compose-sonar.yml
@@ -3,6 +3,8 @@ version: "3.8"
 services:
   sonarqube:
     image: sonarqube:lts
+    depends_on:
+      - sonardb
     container_name: sonarqube
     ports:
       - "8000:9000"
@@ -10,10 +12,12 @@ services:
       nofile:
         soft: "262144"
         hard: "262144"
-    networks:
-      - sonarnet
+    # networks:
+    #   - sonarnet
     environment:
-      - sonar.jdbc.url=jdbc:postgresql://sonardb:5432/sonar
+      - SONAR_JDBC_URL: jdbc:postgresql://db:5432/sonar
+      - SONAR_JDBC_USERNAME: sonar
+      - SONAR_JDBC_PASSWORD: sonar
     volumes:
       - sonarqube_conf:/opt/sonarqube/conf
       - sonarqube_data:/opt/sonarqube/data
@@ -21,12 +25,12 @@ services:
       - sonarqube_logs:/opt/sonarqube/logs
 
   sonardb:
-    image: postgres
+    image: postgres:12
     container_name: postgres_sonar
-    ports:
-      - "5432:5432"
-    networks:
-      - sonarnet
+    # ports:
+    #   - "5432:5432"
+    # networks:
+    #   - sonarnet
     environment:
       - POSTGRES_USER=sonar
       - POSTGRES_PASSWORD=sonar
@@ -34,9 +38,9 @@ services:
       - postgresql:/var/lib/postgresql
       - postgresql_data:/var/lib/postgresql/data
 
-networks:
-  sonarnet:
-    driver: bridge
+# networks:
+#   sonarnet:
+#     driver: bridge
 
 volumes:
   sonarqube_conf:
