--- a/docker-compose-sonar.yml
+++ b/docker-compose-sonar.yml
@@ -15,9 +15,9 @@ services:
     # networks:
     #   - sonarnet
     environment:
-      - SONAR_JDBC_URL: jdbc:postgresql://db:5432/sonar
-      - SONAR_JDBC_USERNAME: sonar
-      - SONAR_JDBC_PASSWORD: sonar
+      - SONAR_JDBC_URL=jdbc:postgresql://db:5432/sonar
+      - SONAR_JDBC_USERNAME=sonar
+      - SONAR_JDBC_PASSWORD=sonar
     volumes:
       - sonarqube_conf:/opt/sonarqube/conf
       - sonarqube_data:/opt/sonarqube/data
