fix(CM): #S08P31A306-270 fix docker-compose-sonar

--- a/docker-compose-sonar.yml
+++ b/docker-compose-sonar.yml
@@ -27,8 +27,8 @@ services:
   sonardb:
     image: postgres:12
     container_name: postgres_sonar
-    # ports:
-    #   - "5432:5432"
+    ports:
+      - "5432:5432"
     # networks:
     #   - sonarnet
     environment:
