--- a/docker-compose-sonar.yml
+++ b/docker-compose-sonar.yml
@@ -12,8 +12,8 @@ services:
       nofile:
         soft: "262144"
         hard: "262144"
-    # networks:
-    #   - sonarnet
+    networks:
+      - sonarnet
     environment:
       - SONAR_JDBC_URL=jdbc:postgresql://db:5432/sonar
       - SONAR_JDBC_USERNAME=sonar
@@ -29,8 +29,8 @@ services:
     container_name: postgres_sonar
     ports:
       - "5432:5432"
-    # networks:
-    #   - sonarnet
+    networks:
+      - sonarnet
     environment:
       - POSTGRES_USER=sonar
       - POSTGRES_PASSWORD=sonar
@@ -38,9 +38,9 @@ services:
       - postgresql:/var/lib/postgresql
       - postgresql_data:/var/lib/postgresql/data
 
-# networks:
-#   sonarnet:
-#     driver: bridge
+networks:
+  sonarnet:
+    driver: bridge
 
 volumes:
   sonarqube_conf:
