fix(CM): #S08P31A306-270 fix sonardb version

--- a/docker-compose-sonar.yml
+++ b/docker-compose-sonar.yml
@@ -25,7 +25,7 @@ services:
       - sonarqube_logs:/opt/sonarqube/logs
 
   sonardb:
-    image: postgres:12
+    image: postgres:latest
     container_name: postgres_sonar
     ports:
       - "5432:5432"
