fix(CM): #S08P31A306-270 fix sonardb version

--- a/docker-compose-sonar.yml
+++ b/docker-compose-sonar.yml
@@ -15,7 +15,7 @@ services:
     networks:
       - sonarnet
     environment:
-      - SONAR_JDBC_URL=jdbc:postgresql://db:5432/sonar
+      - SONAR_JDBC_URL=jdbc:postgresql://sonardb:5432/sonar
       - SONAR_JDBC_USERNAME=sonar
       - SONAR_JDBC_PASSWORD=sonar
     volumes:
