--- a/back-end/roughcode/build.gradle
+++ b/back-end/roughcode/build.gradle
@@ -3,8 +3,8 @@ plugins {
     id 'org.springframework.boot' version '2.7.10'
     id 'io.spring.dependency-management' version '1.0.15.RELEASE'
     // 
-    id "org.sonarqube" version "3.3"
-    id 'jacoco'
+    // id "org.sonarqube" version "3.3"
+    // id 'jacoco'
 }
 
 group = 'com.cody'
@@ -73,44 +73,44 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-mail'
 
     // sonarqube
-    implementation 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:3.3'
+    // implementation 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:3.3'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
 
     // 
-    finalizedBy 'jacocoTestReport'
+    // finalizedBy 'jacocoTestReport'
 }
 
 
-jacoco { 
-    toolVersion = "0.8.7"
-}
+// jacoco { 
+//     toolVersion = "0.8.7"
+// }
 
-jacocoTestReport { 
-    reports {
-        xml.enabled true // sonarqube 분석에 필요한 xml파일만 생성
-        csv.enabled false
-        html.enabled false
-    }
+// jacocoTestReport { 
+//     reports {
+//         xml.enabled true // sonarqube 분석에 필요한 xml파일만 생성
+//         csv.enabled false
+//         html.enabled false
+//     }
 
-}
+// }
 
-sonarqube { 
-    properties {
-        property "sonar.host.url", "http://k8a306.p.ssafy.io:8000/"
-        property "sonar.login", "sqa_8fe374d4ad360a8c8e6acc2ed1ba9cdbcec34d23"
-        property "sonar.projectKey", "sonarqube"
-        property "sonar.projectName" , "sonarqube"
-        property "sonar.sources", "src/main/java,src/main/resources" // 소스 경로
-        property "sonar.language", "java" // 언어
-        property "sonar.sourceEncoding", "UTF-8"
-        property "sonar.profile", "Sonar way" // 소나큐브에서 적용할 프로필(분석할 수준 설정)
-        property "sonar.java.binaries", "build/classes"
-        // property "sonar.java.binaries", "./back-end/roughcode/classes" // # 자바 클래스 파일위치
-        property "sonar.test.inclusions", "**/*Test.java" // # 코드 분석에 사용할 테스트 소스 
-        property "sonar.exclusions", "**/resources/static/**, **/Q*.class, **/test/**"  //# 테스트커버리지에서 제외할 파일, 예제에선 정적 js 파일과 queryDSL Q파일 제외
-        property "sonar.coverage.jacoco.xmlReportPaths", "./back-end/roughcode/reports/jacoco/test/jacocoTestReport.xml"  // # jacoco 플러그인의 결과파일
-    }
-}
+// sonarqube { 
+//     properties {
+//         property "sonar.host.url", "http://k8a306.p.ssafy.io:8000/"
+//         property "sonar.login", "sqa_8fe374d4ad360a8c8e6acc2ed1ba9cdbcec34d23"
+//         property "sonar.projectKey", "sonarqube"
+//         property "sonar.projectName" , "sonarqube"
+//         property "sonar.sources", "src/main/java,src/main/resources" // 소스 경로
+//         property "sonar.language", "java" // 언어
+//         property "sonar.sourceEncoding", "UTF-8"
+//         property "sonar.profile", "Sonar way" // 소나큐브에서 적용할 프로필(분석할 수준 설정)
+//         property "sonar.java.binaries", "build/classes"
+//         // property "sonar.java.binaries", "./back-end/roughcode/classes" // # 자바 클래스 파일위치
+//         property "sonar.test.inclusions", "**/*Test.java" // # 코드 분석에 사용할 테스트 소스 
+//         property "sonar.exclusions", "**/resources/static/**, **/Q*.class, **/test/**"  //# 테스트커버리지에서 제외할 파일, 예제에선 정적 js 파일과 queryDSL Q파일 제외
+//         property "sonar.coverage.jacoco.xmlReportPaths", "./back-end/roughcode/reports/jacoco/test/jacocoTestReport.xml"  // # jacoco 플러그인의 결과파일
+//     }
+// }
