--- a/back-end/roughcode/Jenkinsfile
+++ b/back-end/roughcode/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
         stage('SonarQube analysis') {
             steps {
                 withSonarQubeEnv('SonarQube') {
-                    sh "sonar-scanner -Dsonar.java.binaries=build/classes/java/main"
+                    sh "sonar-scanner -Dsonar.java.binaries=build/classes"
                 }
             }
         }
