fix(CM): #S08P31A306-270 fix Jenkinsfile java.binaries location

--- a/back-end/roughcode/Jenkinsfile
+++ b/back-end/roughcode/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
         stage('SonarQube analysis') {
             steps {
                 withSonarQubeEnv('SonarQube') {
-                    sh "sonar-scanner -Dsonar.java.binaries=build/classes"
+                    sh "sonar-scanner -Dsonar.java.binaries=./app.jar"
                 }
             }
         }
