fix(CM): #S08P31A306-270 fix Jenkinsfile java.binaries location

--- a/back-end/roughcode/Jenkinsfile
+++ b/back-end/roughcode/Jenkinsfile
@@ -8,12 +8,12 @@ pipeline {
                 }
             }
         }
-        stage('SonarQube analysis') {
-            steps {
-                withSonarQubeEnv('SonarQube') {
-                    sh "sonar-scanner -Dsonar.java.binaries=target/classes -X"
-                }
-            }
+        // stage('SonarQube analysis') {
+        //     steps {
+        //         withSonarQubeEnv('SonarQube') {
+        //             sh "sonar-scanner -Dsonar.java.binaries=target/classes -X"
+        //         }
+        //     }
         }
     }
 }
