--- a/front-end/.env
+++ b/front-end/.env
@@ -1,3 +1,3 @@
 # NEXT_PUBLIC_API_URL=https://rough-code.com/api/v1
-# NEXT_PUBLIC_API_URL=http://k8a306.p.ssafy.io:8080/api/v1
-NEXT_PUBLIC_API_URL=http://localhost:8080/api/v1
+NEXT_PUBLIC_API_URL=http://k8a306.p.ssafy.io:8080/api/v1
+# NEXT_PUBLIC_API_URL=http://localhost:8080/api/v1
