refactor(BE): #S08P31A306-309 edit send Alarm email

--- a/back-end/roughcode/src/main/resources/application.yml
+++ b/back-end/roughcode/src/main/resources/application.yml
@@ -61,6 +61,9 @@ app:
       https://${HOST}:3000,
       https://${HOST}:80
 
+stat-card:
+  filepath: statcard.txt
+
 ---
 #spring boot batch + scheduler
 spring:
