--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,6 +15,13 @@
     "@tanstack/react-query": "^4.29.5",
     "@tanstack/react-query-devtools": "^4.29.5",
     "@tippyjs/react": "^4.2.6",
+    "@tiptap/extension-character-count": "^2.0.3",
+    "@tiptap/extension-highlight": "^2.0.3",
+    "@tiptap/extension-task-item": "^2.0.3",
+    "@tiptap/extension-task-list": "^2.0.3",
+    "@tiptap/pm": "^2.0.3",
+    "@tiptap/react": "^2.0.3",
+    "@tiptap/starter-kit": "^2.0.3",
     "axios": "^1.3.6",
     "css-loader": "^6.7.3",
     "dayjs": "^1.11.7",
@@ -26,6 +33,7 @@
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-intersection-observer": "^9.4.3",
+    "remixicon": "^3.2.0",
     "style-loader": "^3.3.2",
     "styled-components": "^5.3.9",
     "tippy.js": "^6.3.7",
