--- a/back-end/roughcode/build.gradle
+++ b/back-end/roughcode/build.gradle
@@ -26,7 +26,7 @@ spotbugs {
     reportLevel = 'low'
 }
 
-tasks.withType(com.github.spotbugs.SpotBugsTask).configureEach {
+tasks.withType(com.github.spotbugs.SpotBugsTask.class).configureEach {
     reports {
         xml.enabled = true
         html.enabled = false
