fix(CM): #S08P31A306-273 fix spotbugs setting in build.gradle

--- a/back-end/roughcode/build.gradle
+++ b/back-end/roughcode/build.gradle
@@ -26,12 +26,12 @@ spotbugs {
     reportLevel = 'low'
 }
 
-tasks.withType(com.github.spotbugs.SpotBugsTask.class).configureEach {
-    reports {
-        xml.enabled = true
-        html.enabled = false
-    }
-}
+// tasks.withType(com.github.spotbugs.SpotBugsTask.class).configureEach {
+//     reports {
+//         xml.enabled = true
+//         html.enabled = false
+//     }
+// }
 
 
 repositories {
