--- a/back-end/roughcode/build.gradle
+++ b/back-end/roughcode/build.gradle
@@ -8,6 +8,8 @@ plugins {
     id 'com.github.spotbugs' version '4.7.0'
 }
 
+apply plugin: 'com.github.spotbugs'
+
 group = 'com.cody'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
