--- a/back-end/roughcode/build.gradle
+++ b/back-end/roughcode/build.gradle
@@ -5,7 +5,8 @@ plugins {
     // 
     // id "org.sonarqube" version "3.3"
     // id 'jacoco'
-    id 'com.github.spotbugs' version '4.7.0'
+    // id 'com.github.spotbugs' version '4.7.0'
+    id "com.github.spotbugs" version "5.0.14"
 }
 
 group = 'com.cody'
@@ -17,14 +18,15 @@ configurations {
         extendsFrom annotationProcessor
     }
 }
-
+// 
 spotbugs {
-    toolVersion = '4.7.0'
-    ignoreFailures = true
-    reportsDir = file("$project.buildDir/reports/spotbugs")
-    effort = 'max'
-    reportLevel = 'low'
+  toolVersion = '4.7.3'
 }
+
+dependencies {
+  spotbugsPlugins 'com.h3xstream.findsecbugs:findsecbugs-plugin:1.12.0'
+}
+// 
 
 repositories {
     mavenCentral()
@@ -127,23 +129,23 @@ tasks.named('test') {
 
 
 
-tasks.register('spotbugsMain', com.github.spotbugs.SpotBugsTask) {
-    dependsOn 'classes'
-    sourceSets = [sourceSets.main]
-    reports {
-        xml.enabled = true
-        html.enabled = false
-    }
-}
+// tasks.register('spotbugsMain', com.github.spotbugs.SpotBugsTask) {
+//     dependsOn 'classes'
+//     sourceSets = [sourceSets.main]
+//     reports {
+//         xml.enabled = true
+//         html.enabled = false
+//     }
+// }
 
-tasks.register('spotbugsTest', com.github.spotbugs.SpotBugsTask) {
-    dependsOn 'testClasses'
-    sourceSets = [sourceSets.test]
-    reports {
-        xml.enabled = true
-        html.enabled = false
-    }
-}
+// tasks.register('spotbugsTest', com.github.spotbugs.SpotBugsTask) {
+//     dependsOn 'testClasses'
+//     sourceSets = [sourceSets.test]
+//     reports {
+//         xml.enabled = true
+//         html.enabled = false
+//     }
+// }
 
 // spotbugsMain {
 //     reports {
