fix(CM): #S08P31A306-273 fix spotbugs setting in build.gradle

--- a/back-end/roughcode/build.gradle
+++ b/back-end/roughcode/build.gradle
@@ -21,6 +21,7 @@ configurations {
 // 
 spotbugs {
   toolVersion = '4.7.3'
+  reportsDir = file("$project.buildDir/reports/spotbugs")
 }
 
 dependencies {
