--- a/back-end/roughcode/build.gradle
+++ b/back-end/roughcode/build.gradle
@@ -22,6 +22,14 @@ configurations {
 spotbugs {
   toolVersion = '4.7.3'
   reportsDir = file("$project.buildDir/reports/spotbugs")
+  ignoreFailures = false
+}
+
+tasks.withType(com.github.spotbugs.SpotBugsTask) {
+   reports {
+      xml.enabled = true
+      html.enabled = true
+   }
 }
 
 dependencies {
