--- a/back-end/roughcode/build.gradle
+++ b/back-end/roughcode/build.gradle
@@ -36,9 +36,9 @@ configurations {
 //    }
 // }
 
-dependencies {
-  spotbugsPlugins 'com.h3xstream.findsecbugs:findsecbugs-plugin:1.12.0'
-}
+// dependencies {
+//   spotbugsPlugins 'com.h3xstream.findsecbugs:findsecbugs-plugin:1.12.0'
+// }
 // 
 
 repositories {
