--- a/front-end/package.json
+++ b/front-end/package.json
@@ -34,6 +34,7 @@
     "react-icons": "^4.8.0",
     "react-intersection-observer": "^9.4.3",
     "remixicon": "^3.2.0",
+    "sharp": "^0.32.1",
     "style-loader": "^3.3.2",
     "styled-components": "^5.3.9",
     "tippy.js": "^6.3.7",
