fix(CM): #S08P31A306-304 fix build bugs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,38 +16,37 @@ services:
       - app-network
 
   nginx:
-    image: nginx:latest
+    restart: always
     container_name: nginx
-
-    restart: always # 개발자가 stop 하는 경우를 제외하고 꺼지면 자동으로 다시 실행하겠다.
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
+    #
     volumes:
-      - ./conf.d/nginx:/etc/nginx/conf.d # Nginx 설정 파일 위치 공유 : 로컬에 미리 작성해준 설정을 Nginx 폴더와 공유
-      - ./app/build:/usr/share/nginx/html # React App을 npm run build로 만든 build된 파일들이 있는 위치 맵핑
-      - ./data/certbot/conf:/etc/nginx/ssl
+      # - ./nginx:/etc/nginx/conf.d
+      - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/data:/var/www/certbot
 
     ports:
       - "80:80"
       - "443:443"
-    expose:
-      - "80"
-      - "443"
+    #
     command: '/bin/sh -c ''while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g "daemon off;"'''
+
     networks:
       - app-network
 
-  certbot: # certbot 서비스 추가
+  certbot:
     image: certbot/certbot:latest
     container_name: certbot
-    command: certonly --webroot --webroot-path=/var/www/certbot --email dongsu712@naver.com --agree-tos --no-eff-email -d rough-code.com -d www.rough-code.com
-    depends_on:
-      - nginx
-    # restart: unless-stopped
+
+    #  발급후에 커맨드 아래 재발급용 커맨드로 바꿔준다.
+    # command: certonly --webroot --webroot-path=/var/www/certbot --email dongsu712@naver.com --agree-tos --no-eff-email -d rough-code.com
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
     volumes:
       - ./data/certbot/conf:/etc/letsencrypt
-      - ./data/certbot/logs:/var/log/letsencrypt
       - ./data/certbot/data:/var/www/certbot
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+      - ./data/certbot/logs:/var/log/letsencrypt
 
 networks:
   app-network:
