fix(CM): #S08P31A306-304 fix build bugs

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -19,9 +19,9 @@ server {
     }
 
 # nginx 세팅
-    location / {        
-        proxy_pass http://frontend;
-    }
+    # location / {        
+    #     proxy_pass http://frontend;
+    # }
 
 # nginx 세팅
     # location /sockjs-node {
