--- a/back-end/roughcode/src/main/resources/application.yml
+++ b/back-end/roughcode/src/main/resources/application.yml
@@ -17,6 +17,8 @@ spring:
     url: jdbc:mariadb://${HOST}:3306/roughcode
     username: ${MARIADB_USER}
     password: ${MARIADB_PASSWORD}
+    hikari:
+      maximum-pool-size: 1024
   security:
     oauth2:
       client:
