--- a/back-end/roughcode/src/main/resources/application.yml
+++ b/back-end/roughcode/src/main/resources/application.yml
@@ -61,8 +61,9 @@ app:
       https://${HOST}:3000,
       https://${HOST}:80
 
-stat-card:
-  filepath: statcard.txt
+filepath:
+  stat-card: statcard.txt
+  google-credentials: google-credentials.json
 
 ---
 #spring boot batch + scheduler
