fix(CM): #S08P31A306-301 fix default.conf nginx

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,7 +6,7 @@ server {
     listen 80;
     server_name rough-code.com;
 
-    include /etc/nginx/conf.d/service-url.inc;
+    # include /etc/nginx/conf.d/service-url.inc;
 
 
     location / {
