fix(CM): #S08P31A306-301 fix deploy compose & add service-url.inc

--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -37,6 +37,8 @@ services:
   nginx-back:
     restart: always
     container_name: nginx-back
+    volumes:
+      - ./nginx/service-url.inc:/etc/nginx/conf.d/service-url.inc
     build:
       context: ./nginx
       dockerfile: Dockerfile
